--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h1 id="posts">Posts</h1>
+        <div class="home"><ul>
+  <li><img src="/Tri2GroupFastpages/images/homer.png" alt="" title="https://github.com/fastai/fastpages" />
+    <h1 id="posts">Posts</h1>
+  </li>
+</ul>
 
 
 
