--- a/_pages/calendar.html
+++ b/_pages/calendar.html
@@ -10,7 +10,7 @@
   <tr>
     <td><input id="input"></td>
     <td>
-      <select name="week" id="week">
+      <select name="Week" id="week">
         <option>Monday</option>
         <option>Tuesday</option>
         <option>Wednesday</option>
