--- a/_pages/map-api.html
+++ b/_pages/map-api.html
@@ -1,8 +1,11 @@
 ---
-layout: categories
-permalink: /categories/
+
+toc: true
+layout: post
+description: Here is our Google Maps API
+categories: [markdown]
 title: Maps API
-search_exclude: true
+
 ---
 
 <!DOCTYPE html>
