--- a/markdown/index.html
+++ b/markdown/index.html
@@ -192,7 +192,7 @@ function displayDayOfWeek() {
   var d = new Date();
   var days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
   var day = days[d.getDay()];
-  document.getElementById("days").innerHTML = "Today is " + day + " these are your tasks:";
+  document.getElementById("days").innerHTML = "Today is " + date ;
 }
 setInterval(displayDayOfWeek, 1000);
 // takes the day and then grabs
@@ -224,8 +224,6 @@ function tasks() {
           break;
   }
 }</script></p>
-
-<p>&lt;/script&gt;</p>
 
   </div>
 
