map almost done

--- a/_pages/map-api.html
+++ b/_pages/map-api.html
@@ -36,6 +36,7 @@ title: Maps API
         });
     }
 </script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDY2PtLK2ZQev5JQNtQA2aMjAO8xruq3lY&callback=initMap"></script>
 
 </body> 
 </html>
