--- a/_pages/map-api.html
+++ b/_pages/map-api.html
@@ -34,6 +34,10 @@ title: Maps API
             zoom: 4, 
             center: location
         });
+        var marker = new google.maps.Marker({
+            position: location, 
+            map: map
+        });
     }
 </script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDY2PtLK2ZQev5JQNtQA2aMjAO8xruq3lY&callback=initMap"></script>
