--- a/_pages/map-api.html
+++ b/_pages/map-api.html
@@ -1,11 +1,8 @@
 ---
-
-toc: true
-layout: post
-description: Here is our Google Maps API
-categories: [markdown]
+layout: default
+permalink: /categories/
 title: Maps API
-
+search_exclude: true
 ---
 
 <!DOCTYPE html>
