--- a/_pages/rentahouse.html
+++ b/_pages/rentahouse.html
@@ -1,8 +1,7 @@
 ---
-toc:true
-layout: post
+layout: categories
 permalink: /categories/
-title: Find Your Home
+title: Pick Your House
 search_exclude: true
 ---
 <!DOCTYPE html>
@@ -27,3 +26,17 @@ search_exclude: true
            message.innerHTML = "Okay Great Choice You Will Be Staying at..." + userInput.value; 
        }
    </script>
+
+<div class="column"> <!--- make a new row -->
+    <!-- each column is one-third of width -->
+    <div class="column">
+      <img src="/images/beauty.jpg" alt="blanca" style="width:20%">
+    </div>
+     <div class="column">
+      <img src="/images/riveria.jpg" alt="hotel2" style="width:20%">
+    </div>
+     <div class="column">
+      <img src="/images/kem.jpg" alt="Kempsi" style="width:20%">
+    </div>
+   </div>
+   
