deploy: 20906cf04a5135f4d6926a7d44edca99745b5641

--- a/markdown/index.html
+++ b/markdown/index.html
@@ -83,7 +83,7 @@ window.onload = wrap_img;
   <li>Organize your activities</li>
   <li>Schedule times for activities 
 <br />
-    <h2 id="create-your-schedule">Create Your Schedule!</h2>
+    <h2 id="create-a-schedule">Create A Schedule!</h2>
   </li>
 </ul>
 
