--- a/_pages/rentahouse.html
+++ b/_pages/rentahouse.html
@@ -14,6 +14,8 @@ permalink: /markdown/
   <tr>
     <th><label for="Activities">Activities:</label></th>
     <th><label for="weeks">Choose a Day:</label></th>
+    <th><label for="Time">Choose a Time:</label></th>
+
     <th>Apply</th>
     <th>Save</th>
   </tr>
@@ -29,7 +31,7 @@ permalink: /markdown/
         <option>Saturday</option>
         <option>Sunday</option>
       </select>
-     <select name="Times" id="Time">
+     <select name="Time" id="Time">
         <option>6:00 AM</option>
         <option>7:00 AM</option>
         <option>8:00 AM</option>
