deploy: ced453ecbb44a1a09e44cc2ef8949370413bcfa9

--- a/markdown/index.html
+++ b/markdown/index.html
@@ -87,6 +87,8 @@ window.onload = wrap_img;
   <tr>
     <th><label for="Activities">Activities:</label></th>
     <th><label for="weeks">Choose a Day:</label></th>
+    <th><label for="Time">Choose a Time:</label></th>
+
     <th>Apply</th>
     <th>Save</th>
   </tr>
@@ -102,7 +104,7 @@ window.onload = wrap_img;
         <option>Saturday</option>
         <option>Sunday</option>
       </select>
-     <select name="Times" id="Time">
+     <select name="Time" id="Time">
         <option>6:00 AM</option>
         <option>7:00 AM</option>
         <option>8:00 AM</option>
