--- a/_pages/rentahouse.html
+++ b/_pages/rentahouse.html
@@ -14,8 +14,6 @@ permalink: /markdown/
   <tr>
     <th><label for="Activities">Activities:</label></th>
     <th><label for="weeks">Choose a Day:</label></th>
-    <th><label for="Time">Choose a Time:</label></th>
-
     <th>Apply</th>
     <th>Save</th>
   </tr>
@@ -31,26 +29,7 @@ permalink: /markdown/
         <option>Saturday</option>
         <option>Sunday</option>
       </select>
-     <select name="Time" id="Time">
-        <option>6:00 AM</option>
-        <option>7:00 AM</option>
-        <option>8:00 AM</option>
-        <option>9:00 AM</option>
-        <option>10:00 AM</option>
-        <option>11:00 AM</option>
-        <option>12:00 PM</option>
-        <option>1:00 PM</option>
-        <option>2:00 PM</option>
-        <option>3:00 PM</option>
-        <option>4:00 PM</option>
-        <option>5:00 PM</option>
-        <option>6:00 PM</option>
-        <option>7:00 PM</option>
-        <option>8:00 PM</option>
-        <option>9:00 PM</option>
-        <option>10:00 PM</option>
-        <option>11:00 PM</option>
-        <option>12:00 AM</option>
+      
     </td>
     <td><button onclick="Add()">Apply</button></td>
     <td><button>Save</button></td>
@@ -87,19 +66,18 @@ permalink: /markdown/
   function Add(){
   var input = document.getElementById("input").value;
   var week = document.getElementById("week").value;
-  var time = document.getElementById("Time").value;
   switch (week) {
     case "Monday":
       var checkbox = document.createElement("check");
       checkbox.type = "checkbox";
       document.getElementById("monday").appendChild(checkbox);
-      document.getElementById("monday").innerText = input + " " + time + " " + document.getElementById("monday").innerText;
+      document.getElementById("monday").innerText = input + " " + document.getElementById("monday").innerText;
       break;
     case "Tuesday":
       var checkbox = document.createElement("check");
       checkbox.type = "checkbox";
       document.getElementById("tuesday").appendChild(checkbox);
-      document.getElementById("tuesday").innerText = input + " " + time + " " + document.getElementById("tuesday").innerText;
+      document.getElementById("tuesday").innerText = input + " " + document.getElementById("tuesday").innerText;
       break;
     case "Wednesday":
       var checkbox = document.createElement("check");
