--- a/_pages/Review.html
+++ b/_pages/Review.html
@@ -2,9 +2,9 @@
 
 toc: true
 layout: post
-description: I am testing code in here for my finalproject
+description: This is the Reviews page for our final project
 categories: [markdown]
-title: HTML code testing
+title: Reviews Page
 
 ---
 
