--- a/_pages/rentahouse.html
+++ b/_pages/rentahouse.html
@@ -56,17 +56,17 @@ search_exclude: true
 </tr>   
 </table>
 <div class="row"> <!--- make a new row -->
-    <!-- each column is one-third of width -->
-    <div class="Row">
-      <img src="/images/design 1 .png" alt="design 1" style="width:20%">
-    </div>
-     <div class="Row">
-      <img src="/images/Design 2 .png" alt="Design 2" style="width:20%">
-    </div>
-     <div class="Row">
-      <img src="/images/Design 3 .png" alt="design 3" style="width:20%">
-    </div>
-   </div>
+  <!-- each column is one-third of width -->
+  <div class="column"> House 1
+    <img src="/images/design 1 .png" alt="house1" style="width:100%">
+  </div>
+   <div class="column"> House 2
+    <img src="/images/Design 2 .png" alt="house2" style="width:100%">
+  </div>
+   <div class="column"> House 3
+    <img src="/images/Design 3 .png" alt="house3" style="width:100%">
+  </div>
+</div>
    
 
 
