--- a/_pages/rentahouse.html
+++ b/_pages/rentahouse.html
@@ -58,7 +58,7 @@ search_exclude: true
 <div class="row"> <!--- make a new row -->
   <!-- each column is one-third of width -->
   <div class="column"> House 1
-    <img src="/images/design 1 .png" alt="house1" style="width:100%">
+    <img src="/Tri2GroupFastpages/images/design 1 .png" alt="house1" style="width:100%">
   </div>
    <div class="column"> House 2
     <img src="/images/Design 2 .png" alt="house2" style="width:100%">
