--- a/forma/index.html
+++ b/forma/index.html
@@ -129,7 +129,7 @@ window.onload = wrap_img;
 <div class="row"> <!--- make a new row -->
   <!-- each column is one-third of width -->
   <div class="column"> House 1
-    <img src="/images/design 1 .png" alt="house1" style="width:100%">
+    <img src="/Tri2GroupFastpages/images/design 1 .png" alt="house1" style="width:100%">
   </div>
    <div class="column"> House 2
     <img src="/images/Design 2 .png" alt="house2" style="width:100%">
