--- a/_pages/rentahouse.html
+++ b/_pages/rentahouse.html
@@ -55,16 +55,20 @@ search_exclude: true
 <th><input type = "submit" value ="Submit"></th>
 </tr>   
 </table>
+
+<style> 
+.row { float: left; width: 33.33%; padding: 5px;}
+</style>
 <div class="row"> <!--- make a new row -->
   <!-- each column is one-third of width -->
   <div class="column"> House 1
     <img src="/Tri2GroupFastpages/images/design 1 .png" alt="house1" style="width:100%">
   </div>
    <div class="column"> House 2
-    <img src="/images/Design 2 .png" alt="house2" style="width:100%">
+    <img src="/Tri2GroupFastpages/images/Design 2 .png" alt="house2" style="width:100%">
   </div>
    <div class="column"> House 3
-    <img src="/images/Design 3 .png" alt="house3" style="width:100%">
+    <img src="/Tri2GroupFastpages/images/Design 3 .png" alt="house3" style="width:100%">
   </div>
 </div>
    
