--- a/map/index.html
+++ b/map/index.html
@@ -90,6 +90,7 @@ window.onload = wrap_img;
 </style>
 
 <h2 id="near-me-finder">Near Me Finder</h2>
+<h4 id="use-the-map-below-to-find-locations-that-are-in-your-area-you-can-use-link-to-freecodecampbuttona-to-plan-your-activities">Use the map below to find locations that are in your area. You can use <a href="https://cubnavarro.github.io/Tri2GroupFastpages/markdown/"><THIS>Link To freeCodeCamp&lt;/button&gt;&lt;/a&gt; to plan your activities!</THIS></a></h4>
 <div id="map"></div>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0erTF9F5UoSk6YZ4wIWNg0j7vbkSXGcw&amp;callback=initMap&amp;v=weekly" defer=""></script>
