deploy: ce01db88b234cb3cfee32994344df2b78bc3f181

--- a/map/index.html
+++ b/map/index.html
@@ -90,7 +90,7 @@ window.onload = wrap_img;
 </style>
 
 <h2 id="near-me-finder">Near Me Finder</h2>
-<h4 id="use-the-map-below-to-find-important-locations-in-your-area-you-can-use-this-to-plan-your-activities">Use the map below to find important locations in your area. You can use <a href="https://cubnavarro.github.io/Tri2GroupFastpages/markdown/"><button>THIS</button></a> to plan your activities!</h4>
+<h4 id="use-the-map-below-to-find-important-locations-in-your-area-if-you-look-in-the-bottom-right-of-the-map-there-is-a-person-you-can-drag-and-place-any-where-on-the-map-and-you-can-get-a-360-view-of-your-selected-location-it-also-tells-you-the-name-of-the-selected-location-in-the-top-right-you-can-use-this-to-plan-your-activities">Use the map below to find important locations in your area. If you look in the bottom right of the map there is a person you can drag and place any where on the map and you can get a 360 view of your selected location (it also tells you the name of the selected location in the top right.) You can use <a href="https://cubnavarro.github.io/Tri2GroupFastpages/markdown/"><button>THIS</button></a> to plan your activities!</h4>
 <div id="map"></div>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0erTF9F5UoSk6YZ4wIWNg0j7vbkSXGcw&amp;callback=initMap&amp;v=weekly" defer=""></script>
