--- a/_pages/rentahouse.html
+++ b/_pages/rentahouse.html
@@ -53,10 +53,11 @@ search_exclude: true
 </th>
        </select>
 <th><input type = "submit" value ="Submit"></th>
-<th><div class = random></div><input type = "randomize" value = Randomize></th>
+<th><div class = random></div><input type = "button" value = Randomize></th>
 </tr>   
 </table>
 <script>
+  
   var raw = "";
 
 var requestOptions = {
