--- a/forma/index.html
+++ b/forma/index.html
@@ -124,10 +124,11 @@ window.onload = wrap_img;
 </th>
        </select>
 <th><input type = "submit" value ="Submit"></th>
-<th><div class = random></div><input type = "randomize" value = Randomize></th>
+<th><div class = random></div><input type = "button" value = Randomize></th>
 </tr>   
 </table>
 <script>
+  
   var raw = "";
 
 var requestOptions = {
