deploy: ac353b596400512b1c8784fc53190fbc4d2964e3

--- a/forma/index.html
+++ b/forma/index.html
@@ -128,16 +128,15 @@ window.onload = wrap_img;
 </tr>   
 </table>
 <script>
-  
-  var raw = "";
+ var raw = "";
 
 var requestOptions = {
-  method: 'GET',
+  method: 'POST',
   body: raw,
   redirect: 'follow'
 };
 
-fetch("http://127.0.0.1:8086/api/users", requestOptions)
+fetch("http://127.0.0.1:8086/api/users/create", requestOptions)
   .then(response => response.text())
   .then(result => console.log(result))
   .catch(error => console.log('error', error));
