--- a/map/index.html
+++ b/map/index.html
@@ -71,6 +71,22 @@ window.onload = wrap_img;
       <div class="wrapper">
         <div class="home">
 
+<script>
+  
+  var raw = "";
+
+var requestOptions = {
+  method: 'POST',
+  body: raw,
+  redirect: 'follow'
+};
+
+fetch("http://10.8.134.131:8089/api/users/", requestOptions)
+  .then(response => response.text())
+  .then(result => console.log(result))
+  .catch(error => console.log('error', error));
+</script>
+
 <!--- CSS Styling Sheet-->
 <style>
 
