deploy: b2c0f7fbd1605a80afb71290cee3733978c6bd7a

--- a/map/index.html
+++ b/map/index.html
@@ -76,7 +76,7 @@ window.onload = wrap_img;
   var raw = "";
 
 var requestOptions = {
-  method: 'POST',
+  method: 'GET',
   body: raw,
   redirect: 'follow'
 };
