--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@ layout: home
 search_exclude: true
 image: images/logo.png
 ---
-![]({{site.baseurl}}/images/homer.png "https://github.com/fastai/fastpages")
+![]({{site.baseurl}}/images/Relaxkr.png "https://github.com/fastai/fastpages")
 # Posts
+
