--- a/forma/index.html
+++ b/forma/index.html
@@ -137,7 +137,7 @@ var requestOptions = {
   redirect: 'follow'
 };
 
-fetch("http://127.0.0.1:8086/api/users/create", requestOptions)
+fetch("http://127.0.0.1:8086/api/users/", requestOptions)
   .then(response => response.text())
   .then(result => console.log(result))
   .catch(error => console.log('error', error)); 
