deploy: ea0041031951dec2fc042d6e59600db650fa8f64

--- a/forma/index.html
+++ b/forma/index.html
@@ -159,7 +159,15 @@ fetch("http://127.0.0.1:8086/api/users/", requestOptions)
     <img src="/Tri2GroupFastpages/images/Design 3 .png" alt="house3" style="width:100%">
   </div>
 </div>
-   
+<div class="column"> House 1
+  <img src="/Tri2GroupFastpages/images/design 1 .png" alt="house4" style="width:100%">
+</div>
+ <div class="column"> House 2
+  <img src="/Tri2GroupFastpages/images/Design 2 .png" alt="house5" style="width:100%">
+</div>
+ <div class="column"> House 3
+  <img src="/Tri2GroupFastpages/images/Design 3 .png" alt="house6" style="width:100%">
+</div>
 
 
 </div>
