--- a/_pages/rentahouse.html
+++ b/_pages/rentahouse.html
@@ -56,6 +56,20 @@ search_exclude: true
 <th><div class = random></div><input onclick="myFunction()" type = "button" value = Randomize></th>
 </tr>   
 </table>
+<h1> Hello, Please provide the name of the house you would like to stay in?</h1>
+    <input id="userInput"> 
+    <button onclick="myFunction()"> Submit </button>
+    <h1 id="message"></h1>
+    <style>
+        body {background-color:aliceblue; text-align: center; font-family: 'Times New Roman', Times, serif ;}
+    </style>
+    <script>
+        function myFunction() {
+            let userInput = document.querySelector("#userInput");
+            let message = document.querySelector("#message");
+            message.innerHTML = "Okay Great Choice You Will Be Staying At The >>>" + userInput.value;  
+        }
+    </script>
 <script>
   myFunction();{
  var raw = "";
