--- a/_pages/rentahouse.html
+++ b/_pages/rentahouse.html
@@ -61,7 +61,7 @@ search_exclude: true
     <button onclick="myFunction()"> Submit </button>
     <h1 id="message"></h1>
     <style>
-        body {background-color:aliceblue; text-align: center; font-family: 'Times New Roman', Times, serif ;}
+        body {background-color:aliceblue; text-align: center; font-size: medium; font-family: 'Times New Roman', Times, serif ;}
     </style>
     <script>
         function myFunction() {
