--- a/forma/index.html
+++ b/forma/index.html
@@ -132,7 +132,7 @@ window.onload = wrap_img;
     <button onclick="myFunction()"> Submit </button>
     <h1 id="message"></h1>
     <style>
-        body {background-color:aliceblue; text-align: center; font-family: 'Times New Roman', Times, serif ;}
+        body {background-color:aliceblue; text-align: center; font-size: medium; font-family: 'Times New Roman', Times, serif ;}
     </style>
     <script>
         function myFunction() {
