--- a/_pages/rentahouse.html
+++ b/_pages/rentahouse.html
@@ -67,7 +67,7 @@ search_exclude: true
         function myFunction() {
             let userInput = document.querySelector("#userInput");
             let message = document.querySelector("#message");
-            message.innerHTML = "Okay Great Choice You Will Be Staying At The >>>" + userInput.value;  
+            message.innerHTML = "Okay Great Choice You Will Be Staying At house 1 ";  
         }
     </script>
 <script>
