deploy: f7c6a27fa14790dd71b60a0d83d515b14dbafba3

--- a/forma/index.html
+++ b/forma/index.html
@@ -138,7 +138,7 @@ window.onload = wrap_img;
         function myFunction() {
             let userInput = document.querySelector("#userInput");
             let message = document.querySelector("#message");
-            message.innerHTML = "Okay Great Choice You Will Be Staying At The >>>" + userInput.value;  
+            message.innerHTML = "Okay Great Choice You Will Be Staying At house 1 ";  
         }
     </script>
 <script>
