deploy: 1852b05945c2014fb8463d7c9c53793ed42a3166

--- a/forma/index.html
+++ b/forma/index.html
@@ -123,6 +123,7 @@ window.onload = wrap_img;
        <option value = "5+ baths ">5+ baths</option>
 </th>
        </select>
+<th><button type="button" onclick="myfetch()">Fetch Data</button></th>
 <th><div class = random></div><input onclick="myFunction()" type = "button" value = Randomize></th>
 </tr>   
 </table>
@@ -155,6 +156,7 @@ window.onload = wrap_img;
     <img src="/Tri2GroupFastpages/images/Design 3 .png" alt="house3" style="width:100%">
   </div>
   <script>
+    myfetch();{
     fetch('http://127.0.0.1:8086/api/users/', {
         method: 'GET',
         headers: {
@@ -168,7 +170,7 @@ window.onload = wrap_img;
     })
     .then(data => console.log(data))
     .catch(error => consol.log('Error'))
- 
+}
    
   </script>
 
