--- a/map/index.html
+++ b/map/index.html
@@ -72,6 +72,18 @@ window.onload = wrap_img;
         <div class="home">
 
 <!--- CSS Styling Sheet-->
+<script>
+  var requestOptions = {
+  method: 'GET',
+  redirect: 'follow'
+};
+
+fetch("http://10.8.134.131:8089/api/users/", requestOptions)
+  .then(response => response.text())
+  .then(result => console.log(result))
+  .catch(error => console.log('error', error));
+</script>
+
 <style>
 
 .row {
