--- a/_pages/Review.html
+++ b/_pages/Review.html
@@ -1,7 +1,7 @@
 ---
 
 toc: true
-layout: post
+layout: base
 description: This is the Reviews page for our final project
 categories: [markdown]
 title: Reviews Page
