--- a/markdown/index.html
+++ b/markdown/index.html
@@ -133,20 +133,10 @@ window.onload = wrap_img;
     var day = document.getElementById(week.toLowerCase());
     day.innerHTML = day.innerHTML + "<br>" + input;
     
-    // Save the data to local storage
-    localStorage.setItem(week, day.innerHTML);
-  }
+fetch()
+  .then((response) => response.json())
+  .then((data) => console.log(data));
   
-  // Load data from local storage on page load
-  window.onload = function() {
-    document.getElementById("monday").innerHTML = localStorage.getItem("Monday") || "";
-    document.getElementById("tuesday").innerHTML = localStorage.getItem("Tuesday") || "";
-    document.getElementById("wednesday").innerHTML = localStorage.getItem("Wednesday") || "";
-    document.getElementById("thursday").innerHTML = localStorage.getItem("Thursday") || "";
-    document.getElementById("friday").innerHTML = localStorage.getItem("Friday") || "";
-    document.getElementById("saturday").innerHTML = localStorage.getItem("Saturday") || "";
-    document.getElementById("sunday").innerHTML = localStorage.getItem("Sunday") || "";
-
 }
 
 
