updates but still wont post broooo

--- a/_pages/qmaker.html
+++ b/_pages/qmaker.html
@@ -27,7 +27,7 @@ tags: [javascript, fetch, get, post, put]
   </tbody>
 </table>
 
-<p>Create API</p>
+<p>Housing</p>
 
 <form action="javascript:create_user()">
     <p><label>
@@ -36,7 +36,7 @@ tags: [javascript, fetch, get, post, put]
     </label></p>
     <p><label>
         Price:
-        <input type="text" name="[rice" id="price" required>
+        <input type="text" name="price" id="price" required>
     </label></p>
     <p><label>
         Beds:
