deploy: 00b4a325581ef7e0fbec8807c67b02e1f34b1ec8

--- a/data/database.html
+++ b/data/database.html
@@ -90,7 +90,7 @@ window.onload = wrap_img;
   </tbody>
 </table>
 
-<p>Create API</p>
+<p>Housing</p>
 
 <form action="javascript:create_user()">
     <p><label>
@@ -99,7 +99,7 @@ window.onload = wrap_img;
     </label></p>
     <p><label>
         Price:
-        <input type="text" name="[rice" id="price" required>
+        <input type="text" name="price" id="price" required>
     </label></p>
     <p><label>
         Beds:
